fix styles in intro block on main page

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -8,7 +8,7 @@
                 <div class="intro-title__top">
                     <div class="intro-title__left _sliding-text">
                         <p class="intro-title__big-letters _sliding-text__line">
-                            We are&nbsp;
+                            We are<span class="intro-title__whitespace">&nbsp;</span>
                         </p>
                         <p class="intro-title__big-letters _sliding-text__line">
                             your best
