added data-mage-init attr on pages

--- a/files for admin/company.phtml
+++ b/files for admin/company.phtml
@@ -1,4 +1,4 @@
-<div class="company-page">
+<div class="company-page" data-mage-init='{"slickCompanyPage" : {}}'>
     <div class="company-page__container _container">
         <div class="company-page__top">
             <h2 class="company-page__title">We are a team of international experts united by a  <span class="company-page__title--orange">single goal</span></h2>
