--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -10,9 +10,7 @@
                         <p class="intro-title__big-letters _sliding-text__line">
                             We are<span class="intro-title__whitespace">&nbsp;</span>
                         </p>
-                        <p class="intro-title__big-letters _sliding-text__line">
-                            your best
-                        </p>
+                        <p class="intro-title__big-letters _sliding-text__line">your best</p>
                     </div>
                     <div class="intro-title__right">
                         <p class="intro-title__sub-title">
@@ -533,7 +531,7 @@
                         <span class="_sliding-text__line">We build timeless</span>
                         <br /><span class="_sliding-text__line">experiences</span>
                     </h3>
-                    <div class="work__gallery gallery">
+                    <div class="work__gallery gallery" data-mage-init='{"slickMainPage": {}}'>
                         <div class="gallery__container">
                             <div class="gallery__content">
                                 <div class="gallery__col">
@@ -803,7 +801,7 @@
         </div>
     </div>
 
-    <div class="comments">
+    <div class="comments" data-mage-init='{"slickComments": {}}'>
         <div class="comments__container _container _grid-2-col">
             <div class="comments__section-label _section-label">
                 Testimonials
