--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -1,4 +1,4 @@
-<div class="services-page">
+<div class="services-page" data-mage-init='{"servicepage":{}}'>
     <div class="services-page__container _container">
         <div class="service-page__top _grid-3-col">
             <h2 class="services-page__title _sliding-text">
@@ -12,7 +12,7 @@
             <h4 class="services-page__sub-title ">We specialise in creating eCommerce websites. We focus on conversion in balance with your brand. Our websites are future proof, with a solid backend and easy to use content management system. We maintain, update, and support with on-going strategic recommendations from the minute you go-live.</h4>
         </div>
         
-        <div class="services-page__squares services-squares">
+        <div class="services-page__squares services-squares" data-mage-init='{"slickServicePage":{}}'>
             <a class="services-squares__square" href="#services-design-section" data-order-mob="1" data-order-desktop="1">
                 <p class="service-squares__text">Web Design <br> for Magento</p>
             </a>
