fix styles on main page

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -219,12 +219,12 @@
                             </div>
                             <div class="digital-squares__item">
                                 <div class="digital-squares__content">
-                                    <h4>Magento PWA</h4>
+                                    <h4>Magento <br/> PWA</h4>
                                 </div>
                             </div>
                             <div class="digital-squares__item">
                                 <div class="digital-squares__content">
-                                    <h4>Magento Support</h4>
+                                    <h4>Magento <br/> Support</h4>
                                 </div>
                             </div>
                         </div>
@@ -232,19 +232,19 @@
                         <div class="digital-squares__row">
                             <div class="digital-squares__item">
                                 <div class="digital-squares__content">
-                                    <h4>Server & Magento Optimization</h4>
+                                    <h4>Server & Magento <br/> Optimization</h4>
                                 </div>
                             </div>
                             <div class="digital-squares__empty"></div>
                             <div class="digital-squares__item">
                                 <div class="digital-squares__content">
-                                    <h4>Magento Security Audit</h4>
+                                    <h4>Magento <br/> Security Audit</h4>
                                 </div>
                             </div>
                             <div
                                 class="digital-squares__item digital-squares__item--no-border--centered"
                             >
-                                <a href="#" class="digital-block__link"
+                                <a href="#" class="digital-block__link _link-arrow"
                                     >Discover more</a
                                 >
                             </div>
@@ -410,6 +410,7 @@
     </div>
 
     <div class="company">
+        <div class="company__bg-lines"></div>
         <div class="company__container _container">
             <div class="company__body _grid-3-col">
                 <div class="company__section-label _section-label">Company</div>
@@ -419,7 +420,7 @@
                     </h3>
                     <h5 class="company__text _text-align-right">
                         With more than a decade of experience, Perspective has
-                        become a leader in digital experiences. Clients
+                        become a leader in digital experiences. <br/> Clients
                         worldwide entrust us with the design, development and
                         management of their websites.
                     </h5>
@@ -458,7 +459,7 @@
                     <h5 class="company__text _text-align-right">
                         We are the Magento focused web-development company named
                         Perspective Studio with HQ located in Kyiv, Ukraine with
-                        more than 67 employees. Most of them are strong middle
+                        more than 67 employees. <br/> Most of them are strong middle
                         and senior developers with 5+ years of experience in
                         Magento.
                     </h5>
@@ -579,10 +580,9 @@
                                     </div>
                                 </div>
                                 <div class="gallery__col gallery__col--reverse">
-                                    <div class="gallery__show-more">
-                                        <p>See all work</p>
-                                        <div class="icon-arrow">&nbsp;</div>
-                                    </div>
+                                    <a class="gallery__show-more _link-arrow" href="{{store url='work'}}">
+                                        See all work
+                                    </a>
                                     <div class="gallery__slide gallery-slide">
                                         <div class="gallery-slide__image">
                                             <img
