little changes on main and careers pages

--- a/files for admin/careers.phtml
+++ b/files for admin/careers.phtml
@@ -76,7 +76,7 @@
                     <li>You will have access to an internal offline and online library, which contains professional literature for all specialists.</li>
                 </ul>
 
-                <div class="careers-section__image">
+                <div class="careers-section__image careers-section__image--desktop">
                     <img src="{{media url='wysiwyg/careers/2109.w032.n003.103B.p1.103_Converted_1.png'}}" alt="">              
                 </div>
             </div>
@@ -94,7 +94,9 @@
 
                 <div class="_h4">Gamification</div>
                 <p>Gamification - by performing certain actions, earn internal currency and exchange it for corporate merchandise or other goodies from the company</p>
-
+                <div class="careers-section__image careers-section__image--mobile">
+                    <img src="{{media url='wysiwyg/careers/2109.w032.n003.103B.p1.103_Converted_1.png'}}" alt="">              
+                </div>
             </div>
         </div>
     </div>
@@ -114,7 +116,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">Back-End Developer </h5>
+                                <h4 class="careers-collapsible__title">Back-End Developer </h4>
                                 <p class="careers-collapsible__locate">Cherkasy, Kryvyi Rih</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -128,7 +130,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">Magento Back-end Developer</h5>
+                                <h4 class="careers-collapsible__title">Magento Back-end Developer</h4>
                                 <p class="careers-collapsible__locate">Cherkasy, Uzhhorod, Kryvyi Rih, Shostka</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -142,7 +144,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">Project Manager</h5>
+                                <h4 class="careers-collapsible__title">Project Manager</h4>
                                 <p class="careers-collapsible__locate">Kyiv</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -156,7 +158,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">Sales Development Representative</h5>
+                                <h4 class="careers-collapsible__title">Sales Development Representative</h4>
                                 <p class="careers-collapsible__locate">Kyiv</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -170,7 +172,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">QA engineer</h5>
+                                <h4 class="careers-collapsible__title">QA engineer</h4>
                                 <p class="careers-collapsible__locate">Uzhhorod, Shostka</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -222,7 +224,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">People Manager, OM</h5>
+                                <h4 class="careers-collapsible__title">People Manager, OM</h4>
                                 <p class="careers-collapsible__locate">Kyiv</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -237,7 +239,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">DevOps engineer</h5>
+                                <h4 class="careers-collapsible__title">DevOps engineer</h4>
                                 <p class="careers-collapsible__locate">Cherkasy, Uzhhorod, Shostka</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
@@ -251,7 +253,7 @@
                     <div data-role="collapsible" class="careers-collapsible__item">
                         <div data-role="trigger" class="careers-collapsible__trigger">
                             <div class="careers-collapsible__header">
-                                <h5 class="careers-collapsible__title">QA engineer</h5>
+                                <h4 class="careers-collapsible__title">QA engineer</h4>
                                 <p class="careers-collapsible__locate">Uzhhorod, Shostka</p>
                             </div>
                             <span class="careers-collapsible__plus-sign"></span>
