--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -877,7 +877,7 @@
 
                         <li class="adobe-achievments__item">
                             <div class="adobe-achievments__image">
-                                <img src="{{media url='wysiwyg/Main/Professional.png'}}" alt="prof" />
+                                <img src="https://new.perspective.net.ua/media/wysiwyg/Main/Adobe_Certified_Professional_Experience_Cloud_products_Digital_Badge.png" alt="" />
                             </div>
                             <div class="adobe-achievments__body">
                                 <div class="adobe-achievments__name">
