--- a/files for admin/company.phtml
+++ b/files for admin/company.phtml
@@ -1,7 +1,7 @@
 <div class="company-page" data-mage-init='{"slickCompanyPage" : {}}'>
     <div class="company-page__container _container">
         <div class="company-page__top">
-            <h2 class="company-page__title">We are a team of international experts united by a  <span class="company-page__title--orange">single goal</span></h2>
+            <h2 class="company-page__title">We are a team of international experts united by a <span class="company-page__title--orange">single goal</span></h2>
             <h4 class="company-page__sub-title _text-align-right">We help to make money on the Internet, as well as contributes to business development by introducing IT innovations into them.</h4>
             <div class="company-page__image">
                 <img src="{{media url='wysiwyg/company/background-about.png'}}" alt="sec">
@@ -12,19 +12,19 @@
                 </div>
                 <div class="company-squares__square company-square company-square--fronts">
                     <div class="company-square__digit">12</div>
-                    <p class="company-square__text">front-end <br/> developers</p>
+                    <p class="company-square__text">front-end <br /> developers</p>
                 </div>
                 <div class="company-squares__square company-square company-square--backs">
                     <div class="company-square__digit">32</div>
-                    <p class="company-square__text">back-end <br/> developers</p>
+                    <p class="company-square__text">back-end <br /> developers</p>
                 </div>
                 <div class="company-squares__square company-square company-square--qa">
                     <div class="company-square__digit">6</div>
-                    <p class="company-square__text">qa - 6 employees <br/>& team lead</p>
+                    <p class="company-square__text">qa - 6 employees <br />& team lead</p>
                 </div>
                 <div class="company-squares__square company-square company-square--devops">
                     <div class="company-square__digit">4</div>
-                    <p class="company-square__text">DevOps <br/>& SysOps</p>
+                    <p class="company-square__text">DevOps <br />& SysOps</p>
                 </div>
             </div>
         </div>
@@ -40,8 +40,16 @@
 
                     <div class="company-growth__bottom">
                         <h3 class="company-growth__title">Our aim is to become <span class="company-growth__title--orange">the Best</span> Magento Team ever</h3>
-                        <div class="company-growth__image">
-                            <img src="{{media url='wysiwyg/company/ua-04_3.png'}}" alt="map" width="696" height="689">
+                        <div class="company-growth__image company-map-image" data-mage-init='{"companyImageAnimation" : {}}'>
+                            <div class="company-map-image__container">
+                                <div class="highlight"></div>
+                                <div class="ukraine"></div>
+                                <div class="uzh"></div>
+                                <div class="shost"></div>
+                                <div class="kyiv"></div>
+                                <div class="kr"></div>
+                                <div class="cher"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -134,12 +142,12 @@
                 <div class="company-gallery__photos gallery-photos">
                     <div class="gallery-photos__col">
                         <div class="gallery-photos__item">
-                            <img src="{{media url='wysiwyg/company/2.png'  }}" alt="sec"> 
+                            <img src="{{media url='wysiwyg/company/2.png'  }}" alt="sec">
                         </div>
                         <div class="gallery-photos__item">
                             <img src="{{media url='wysiwyg/company/1.png'}}" alt="frst">
                         </div>
-                        
+
                         <a href="#footer-alt" class="gallery-photos__button _button _button--orange-bg _scrollTo">
                             <h5>Join the team</h5>
                         </a>
@@ -149,7 +157,7 @@
                         <div class="gallery-photos__item">
                             <img src="{{media url='wysiwyg/company/4.png' }}" alt="four">
                         </div>
-                        
+
                         <div class="gallery-photos__item">
                             <img src="{{media url='wysiwyg/company/3.png'}}" alt="three">
                         </div>
@@ -172,7 +180,7 @@
                         <div class="pets-gallery__col">
                             <div class="pets-gallery__image">
                                 <img src="{{media url='wysiwyg/company/1_1.png'}}" alt="fst">
-                            </div> 
+                            </div>
                             <div class="pets-gallery__image">
                                 <img src="{{media url='wysiwyg/company/3_1.png'}}" alt="three">
                             </div>
@@ -180,15 +188,15 @@
 
                         <div class="pets-gallery__col">
                             <div class="pets-gallery__image">
-                             <img src="{{media url='wysiwyg/company/4_1.png'}}" alt="four">
+                                <img src="{{media url='wysiwyg/company/4_1.png'}}" alt="four">
                             </div>
                             <div class="pets-gallery__image">
                                 <img src="{{media url='wysiwyg/company/2_1.png'}}" alt="sec">
-                            </div> 
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>  
+            </div>
         </section>
     </div>
 </div>
