--- a/files for admin/contacts.phtml
+++ b/files for admin/contacts.phtml
@@ -2,7 +2,7 @@
     <div class="contact-page__container _container">
         <div class="contact-page__top">
             <div class="contact-page__title">
-                <p>we are <span class="contact-page__title contact-page__title--orange">open <br>for your</span> ideas, questions and needs</p>
+                <p>we are <span style="display:inline" class="contact-page__title contact-page__title--orange">open<br> for your ideas,</span> questions and needs</p>
             </div>
             <h4 class="contact-page__sub-title">
                 <p>Some of the world’s most impactful products, solutions and campaigns start with a conversation. Tell us about what you’re making and we’ll see how we can help</p>
