added links to fb and linkedIn

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
                             <div class="digital-squares__item digital-squares__item--no-border--centered">
-                                <a href="#" class="digital-block__link _link-arrow">Discover more</a>
+                                <a href="{{store url='services'}}" class="digital-block__link _link-arrow">Discover more</a>
                             </div>
                         </div>
                     </div>
