added lazy load attr to all images on static pages

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -341,7 +341,7 @@
                         <div class="squares-company__square">
                             <div class="squares-company__number">6</div>
                             <h5 class="squares-company__text">
-                                qa - 6 employees & team lead
+                                QA engineers & team lead
                             </h5>
                         </div>
 
@@ -382,7 +382,7 @@
                         <div class="squares-company__square">
                             <div class="squares-company__number">6</div>
                             <h5 class="squares-company__text">
-                                qa - 6 employees & team lead
+                                QA engineers & team lead
                             </h5>
                         </div>
 
