--- a/files for admin/works/vodafone.phtml
+++ b/files for admin/works/vodafone.phtml
@@ -22,7 +22,7 @@
 
             </div>
             <div class="single-work-page__image single-work-page__image--w-full">
-                <img src='<?php echo $this->getViewFileUrl('images/test/vodafon-top.png'); ?>' alt=”Demo” />
+                <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vodafon-top.png'); ?>' alt=”Demo” />
             </div>
         </section>
 
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="single-work-page__image single-work-page__image--w-full single-work-page__video single-work-page__video--w-full">
-                <img src='<?php echo $this->getViewFileUrl('images/test/vodafon-video-placeholder.png'); ?>' alt=”Demo” />
+                <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vodafon-video-placeholder.png'); ?>' alt=”Demo” />
             </div>
         </section>
 
@@ -133,10 +133,10 @@
                 </div>
 
                 <div class="single-work-page__image single-work-page__image--w-full single-work-homepage__image single-work-homepage__image--first">
-                    <img src='<?php echo $this->getViewFileUrl('images/test/vod-homepage1.png'); ?>' alt=”Demo” />
+                    <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-homepage1.png'); ?>' alt=”Demo” />
                 </div>
                 <div class="single-work-page__image single-work-page__image--w-full single-work-homepage__image">
-                    <img src='<?php echo $this->getViewFileUrl('images/test/vod-homepage-2.png'); ?>' alt=”Demo” />
+                    <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-homepage-2.png'); ?>' alt=”Demo” />
                 </div>
             </div>
         </section>
@@ -174,12 +174,12 @@
                 </div>
 
                 <div class="single-work-page__image single-work-page__image--w-full single-work-catalog__image">
-                    <img src='<?php echo $this->getViewFileUrl('images/test/vod-catalog--small.png'); ?>' alt=”Demo” />
+                    <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-catalog--small.png'); ?>' alt=”Demo” />
                 </div>
             </div>
 
             <div class="single-work-page__image single-work-page__image--w-full single-work-page__video">
-                <img src='<?php echo $this->getViewFileUrl('images/test/vod-catalog-vid-placeholder.png'); ?>' alt=”Demo” />
+                <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-catalog-vid-placeholder.png'); ?>' alt=”Demo” />
             </div>
         </section>
 
@@ -211,7 +211,7 @@
             </div>
 
             <div class="single-work-page__image single-work-page__image--w-full single-work-page__video">
-                <img src='<?php echo $this->getViewFileUrl('images/test/vod-product-vid-placeholder.png'); ?>' alt=”Demo” />
+                <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-product-vid-placeholder.png'); ?>' alt=”Demo” />
             </div>
         </section>
 
@@ -222,14 +222,14 @@
                     <h3 class="single-work-more__title">Portal page </h3>
                     <p class="single-work-more__text">Ability to create a page with a page builder.</p>
                     <div class="single-work-page__image single-work-more__image ">
-                        <img src='<?php echo $this->getViewFileUrl('images/test/vod-more-1.png'); ?>' alt=”Demo” />
+                        <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-more-1.png'); ?>' alt=”Demo” />
                     </div>
                 </div>
                 <div class="single-work-more__col">
                     <h3 class="single-work-more__title">All promotions</h3>
                     <p class="single-work-more__text">The ability to filter, view products and conditions of the promotion.</p>
                     <div class="single-work-page__image single-work-more__image ">
-                        <img src='<?php echo $this->getViewFileUrl('images/test/vod-more-2.png'); ?>' alt=”Demo” />
+                        <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-more-2.png'); ?>' alt=”Demo” />
                     </div>
                 </div>
             </div>
@@ -277,7 +277,7 @@
             </div>
 
             <div class="single-work-page__image single-work-more__image ">
-                <img src='<?php echo $this->getViewFileUrl('images/test/vod-bag.png'); ?>' alt=”Demo” />
+                <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-bag.png'); ?>' alt=”Demo” />
             </div>
         </section>
 
@@ -310,23 +310,23 @@
 
                     <div class="single-work-checkout__cell single-work-checkout__cell--desktop">
                         <div class="single-work-page__image single-work-checkout__image">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-1.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-1.png'); ?>' alt=”Demo” />
                         </div>
                     </div>
                     <div class="single-work-checkout__cell single-work-checkout__cell--desktop">
                         <div class="single-work-page__image single-work-checkout__image">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-2.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-2.png'); ?>' alt=”Demo” />
                         </div>
                     </div>
                     <div class="single-work-checkout__cell single-work-checkout__cell--desktop">
                         <div class="single-work-page__image single-work-checkout__image">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-3.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-3.png'); ?>' alt=”Demo” />
                         </div>
                     </div>
 
                     <div class="single-work-checkout__cell single-work-checkout__cell--mobile">
                         <div class="single-work-page__image single-work-page__image--w-full">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-mob.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-checkout-mob.png'); ?>' alt=”Demo” />
                         </div>
                     </div>
                 </div>
@@ -350,7 +350,7 @@
 
                         </li>
                         <div class="single-work-page__image single-work-dashboard__image single-work-dashboard__image--mobile">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-1.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-1.png'); ?>' alt=”Demo” />
                         </div>
                         <li>
                             <div class="_list__legend _list__legend">Address management</div>
@@ -358,7 +358,7 @@
 
                         </li>
                         <div class="single-work-page__image single-work-dashboard__image single-work-dashboard__image--mobile">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-2.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-2.png'); ?>' alt=”Demo” />
                         </div>
                     </ul>
                     <ul class="single-work-dashboard__list _list">
@@ -368,7 +368,7 @@
 
                         </li>
                         <div class="single-work-page__image single-work-dashboard__image single-work-dashboard__image--mobile">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-3.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-3.png'); ?>' alt=”Demo” />
                         </div>
                         <li>
                             <div class="_list__legend _list__legend">Subscription management</div>
@@ -376,14 +376,14 @@
 
                         </li>
                         <div class="single-work-page__image single-work-dashboard__image single-work-dashboard__image--mobile">
-                            <img src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-4.png'); ?>' alt=”Demo” />
+                            <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-mob-4.png'); ?>' alt=”Demo” />
                         </div>
                     </ul>
                 </div>
             </div>
 
             <div class="single-work-page__image single-work-dashboard__image single-work-dashboard__image--desktop">
-                <img src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-desk.png'); ?>' alt=”Demo” />
+                <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-dashboard-desk.png'); ?>' alt=”Demo” />
             </div>
         </section>
 
@@ -399,7 +399,7 @@
                         <div class="single-work-functionality__card functionality-card">
                             <div class="functionality-card__body">
                                 <div class="functionality-card__image ">
-                                    <img src='<?php echo $this->getViewFileUrl('images/test/vod-functional-1.png'); ?>' alt=”Demo” />
+                                    <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-functional-1.png'); ?>' alt=”Demo” />
                                 </div>
                                 <p class="functionality-card__text--bold">Integration with 1C</p>
                             </div>
@@ -408,7 +408,7 @@
                             <div class="functionality-card__body">
 
                                 <div class="functionality-card__image">
-                                    <img src='<?php echo $this->getViewFileUrl('images/test/vod-functional-2.png'); ?>' alt=”Demo” />
+                                    <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-functional-2.png'); ?>' alt=”Demo” />
                                 </div>
                                 <p class="functionality-card__text--bold">Download speed optimization</p>
                             </div>
@@ -453,7 +453,7 @@
             </div>
 
             <div class="single-work-page__image single-work-page__image--w-full single-work-adaptive__image ">
-                <img src='<?php echo $this->getViewFileUrl('images/test/vod-adaptive.png'); ?>' alt=”Demo” />
+                <img loading="lazy" src='<?php echo $this->getViewFileUrl('images/test/vod-adaptive.png'); ?>' alt=”Demo” />
             </div>
         </section>
 
