--- a/files for admin/company.phtml
+++ b/files for admin/company.phtml
@@ -4,7 +4,7 @@
             <h2 class="company-page__title">We are a team of international experts united by a <span class="company-page__title--orange">single goal</span></h2>
             <h4 class="company-page__sub-title _text-align-right">We help to make money on the Internet, as well as contributes to business development by introducing IT innovations into them.</h4>
             <div class="company-page__image">
-                <img src="{{media url='wysiwyg/company/background-about.png'}}" alt="sec">
+                <img loading="lazy" src="{{media url='wysiwyg/company/background-about.png'}}" alt="sec">
             </div>
             <div class="company-page__squares company-squares">
                 <div class="company-squares__text _text-align-right">
@@ -20,7 +20,7 @@
                 </div>
                 <div class="company-squares__square company-square company-square--qa">
                     <div class="company-square__digit">6</div>
-                    <p class="company-square__text">qa - 6 employees <br />& team lead</p>
+                    <p class="company-square__text">QA engineers <br />& team lead</p>
                 </div>
                 <div class="company-squares__square company-square company-square--devops">
                     <div class="company-square__digit">4</div>
@@ -187,7 +187,7 @@
                         <div class="team-gallery__col">
                             <div class="team-gallery__person">
                                 <div class="team-gallery__photo">
-                                    <img src="{{media url='wysiwyg/company/Mik.png'}}" alt="Mikhail">
+                                    <img loading="lazy" src="{{media url='wysiwyg/company/Mik.png'}}" alt="Mikhail">
                                 </div>
                                 <div class="team-gallery__label team-gallery__label--mik photo-label">
                                     <div class="photo-label__name">Mikhail Knyr</div>
@@ -197,7 +197,7 @@
 
                             <div class="team-gallery__person">
                                 <div class="team-gallery__photo">
-                                    <img src="{{media url='wysiwyg/company/Al.png'}}" alt="Alyona">
+                                    <img loading="lazy" src="{{media url='wysiwyg/company/Al.png'}}" alt="Alyona">
                                 </div>
                                 <div class="team-gallery__label team-gallery__label--ale photo-label">
                                     <div class="photo-label__name">Alena Karasevich</div>
@@ -208,7 +208,7 @@
                         <div class="team-gallery__col">
                             <div class="team-gallery__person">
                                 <div class="team-gallery__photo">
-                                    <img src="{{media url='wysiwyg/company/Yar.png'}}" alt="Yaroslav">
+                                    <img loading="lazy" src="{{media url='wysiwyg/company/Yar.png'}}" alt="Yaroslav">
                                 </div>
                                 <div class="team-gallery__label team-gallery__label--yar photo-label">
                                     <div class="photo-label__name">Yaroslav Zinchuk</div>
@@ -218,7 +218,7 @@
 
                             <div class="team-gallery__person">
                                 <div class="team-gallery__photo">
-                                    <img src="{{media url='wysiwyg/company/Nat.png'}}" alt="Natalya">
+                                    <img loading="lazy" src="{{media url='wysiwyg/company/Nat.png'}}" alt="Natalya">
                                 </div>
                                 <div class="team-gallery__label team-gallery__label--nata photo-label">
                                     <div class="photo-label__name">Natalya Stupakova</div>
@@ -229,7 +229,7 @@
                         <div class="team-gallery__col">
                             <div class="team-gallery__person team-gallery__person--art">
                                 <div class="team-gallery__photo">
-                                    <img src="{{media url='wysiwyg/company/Art.png'}}" alt="Artur">
+                                    <img loading="lazy" src="{{media url='wysiwyg/company/Art.png'}}" alt="Artur">
                                 </div>
                                 <div class="team-gallery__label team-gallery__label--art photo-label">
                                     <div class="photo-label__name">Artur Potulny</div>
@@ -239,7 +239,7 @@
 
                             <div class="team-gallery__person ">
                                 <div class="team-gallery__photo">
-                                    <img src="{{media url='wysiwyg/company/Arn.png'}}" alt="Arnold">
+                                    <img loading="lazy" src="{{media url='wysiwyg/company/Arn.png'}}" alt="Arnold">
                                 </div>
                                 <div class="team-gallery__label team-gallery__label--arn photo-label">
                                     <div class="photo-label__name">Viktor Klimovych</div>
@@ -258,29 +258,31 @@
                     We are like <span class="company-gallery__title--orange">a family</span> with common goals, <span class="company-gallery__title--orange">a team</span> of like-minded people driven by <span class="company-gallery__title--orange">passion to what we do</span>
                 </h3>
                 <div class="company-gallery__image company-gallery__image--panorama">
-                    <img src="{{media url='wysiwyg/company/total_1.png'}}" alt="background-gallery">
+                    <img loading="lazy" src="{{media url='wysiwyg/company/total_1.png'}}" alt="background-gallery">
                 </div>
                 <div class="company-gallery__photos gallery-photos">
                     <div class="gallery-photos__col">
                         <div class="gallery-photos__item">
-                            <img src="{{media url='wysiwyg/company/2.png'  }}" alt="sec">
+                            <img loading="lazy" src="{{media url='wysiwyg/company/2.png'  }}" alt="sec">
                         </div>
                         <div class="gallery-photos__item">
-                            <img src="{{media url='wysiwyg/company/1.png'}}" alt="frst">
+                            <img loading="lazy" src="{{media url='wysiwyg/company/1.png'}}" alt="frst">
                         </div>
 
-                        <a href="#footer-alt" class="gallery-photos__button _button _button--orange-bg _scrollTo">
-                            <h5>Join the team</h5>
+                        <a href="#footer-alt" class="gallery-photos__button _button _button--orange-bg _button--arrow _scrollTo">
+                            <h5 class="_button__text">Join the team</h5>
+                            <span class="_button__overlay _button__overlay--hover"></span>
+                            <span class="_button__overlay _button__overlay--active"></span>
                         </a>
                     </div>
                     <div class="gallery-photos__col ">
                         <h5 class="gallery-photos__sub-title _text-align-right">Sure, we know how to work together, but we also know how to play together. This helps build strong relationships, amazing projects and an environment that puts people first—and they know it.</h5>
                         <div class="gallery-photos__item">
-                            <img src="{{media url='wysiwyg/company/4.png' }}" alt="four">
+                            <img loading="lazy" src="{{media url='wysiwyg/company/4.png' }}" alt="four">
                         </div>
 
                         <div class="gallery-photos__item">
-                            <img src="{{media url='wysiwyg/company/3.png'}}" alt="three">
+                            <img loading="lazy" src="{{media url='wysiwyg/company/3.png'}}" alt="three">
                         </div>
                     </div>
 
@@ -300,19 +302,19 @@
                     <div class="company-pets__gallery pets-gallery">
                         <div class="pets-gallery__col">
                             <div class="pets-gallery__image">
-                                <img src="{{media url='wysiwyg/company/1_1.png'}}" alt="fst">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/1_1.png'}}" alt="fst">
                             </div>
                             <div class="pets-gallery__image">
-                                <img src="{{media url='wysiwyg/company/3_1.png'}}" alt="three">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/3_1.png'}}" alt="three">
                             </div>
                         </div>
 
                         <div class="pets-gallery__col">
                             <div class="pets-gallery__image">
-                                <img src="{{media url='wysiwyg/company/4_1.png'}}" alt="four">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/4_1.png'}}" alt="four">
                             </div>
                             <div class="pets-gallery__image">
-                                <img src="{{media url='wysiwyg/company/2_1.png'}}" alt="sec">
+                                <img loading="lazy" src="{{media url='wysiwyg/company/2_1.png'}}" alt="sec">
                             </div>
                         </div>
                     </div>
