--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -13,25 +13,25 @@
         </div>
         
         <div class="services-page__squares services-squares" data-mage-init='{"slickServicePage":{}}'>
-            <a class="services-squares__square" href="#services-design-section" data-order-mob="1" data-order-desktop="1">
+            <a class="services-squares__square _scrollTo" href="#services-design-section" data-order-mob="1" data-order-desktop="1">
                 <p class="service-squares__text">Web Design <br> for Magento</p>
             </a>
-            <a class="services-squares__square" href="#services-migration-section" data-order-mob="3" data-order-desktop="2">
+            <a class="services-squares__square _scrollTo" href="#services-migration-section" data-order-mob="3" data-order-desktop="2">
                 <p class="service-squares__text">Magento 2 Migration</p>
             </a>
-            <a class="services-squares__square" href="#services-pwa-section" data-order-mob="4" data-order-desktop="3">
+            <a class="services-squares__square _scrollTo" href="#services-pwa-section" data-order-mob="4" data-order-desktop="3">
                 <p class="service-squares__text">Magento <br> PWA</p>
             </a>
-            <a class="services-squares__square" href="#services-optimization-section" data-order-mob="7" data-order-desktop="4">
+            <a class="services-squares__square _scrollTo" href="#services-optimization-section" data-order-mob="7" data-order-desktop="4">
                 <p class="service-squares__text">Server & Magento <br>  Optimization</p>
             </a>
-            <a class="services-squares__square" href="#services-development-section" data-order-mob="2" data-order-desktop="5">
+            <a class="services-squares__square _scrollTo" href="#services-development-section" data-order-mob="2" data-order-desktop="5">
                 <p class="service-squares__text">Magento Development</p>
             </a>
-            <a class="services-squares__square" href="#services-security-section" data-order-mob="5" data-order-desktop="6">
+            <a class="services-squares__square _scrollTo" href="#services-security-section" data-order-mob="5" data-order-desktop="6">
                 <p class="service-squares__text">Magento Security Audit</p>
             </a>
-            <a class="services-squares__square" href="#services-support-section" data-order-mob="6" data-order-desktop="7">
+            <a class="services-squares__square _scrollTo" href="#services-support-section" data-order-mob="6" data-order-desktop="7">
                 <p class="service-squares__text">Magento <br> Support</p>
             </a>
         </div>
@@ -45,7 +45,7 @@
                         <p class=" service-section__text service-section__text--second-line">We will help you take your online store to the next level with our eCommerce design services. Contact us to learn more about how a good user experience and user interface can impact your online sales.</p>
                     </div>
                 <div class="service-section__image">
-                    <img src="{{media url='wysiwyg/Service/design.png'}}" alt="devolope-image">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/design.png'}}" alt="devolope-image">
                 </div>
             </div>
         </section>
@@ -54,7 +54,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Development</div>
                 <div class="service-section__image">
-                    <img src="{{media url='wysiwyg/Service/Development.png'}}" alt="design-image ">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/Development.png'}}" alt="design-image ">
                 </div>
                 <div class="service-section__content">
                         <h3 class="service-section__title">Magento Development    </h3>
@@ -72,7 +72,7 @@
                         <p class=" service-section__text">Magento 1 to Magento 2 migration process is perceived to be intimidating by some merchants, resulting in their postponing the procedure indefinitely. Plus, after years of using Magento 1 many grew attached to the familiar features and demonstrated robustness of the platform. </p>
                     </div>
                 <div class="service-section__image">
-                    <img src="{{media url='wysiwyg/Service/migration.png'}}" alt="migration-image ">             
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/migration.png'}}" alt="migration-image ">             
                 </div>
             </div>
         </section>
@@ -81,7 +81,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">PWA</div>
                 <div class="service-section__image">
-                    <img src="{{media url='wysiwyg/Service/pwa.png'}}" alt="migration-image ">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/pwa.png'}}" alt="migration-image ">
                 </div>
                 <div class="service-section__content">
                         <h3 class="service-section__title">Magento PWA</h3>
@@ -103,7 +103,7 @@
                         </ul>
                     </div>
                 <div class="service-section__image">
-                    <img src="{{media url='wysiwyg/Service/Security.png'}}" alt="securety-image ">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/Security.png'}}" alt="securety-image ">
                 </div>
             </div>
         </section>
@@ -112,7 +112,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Support</div>
                 <div class="service-section__image">
-                    <img src="{{media url='wysiwyg/Service/support.png'}}" alt="support-image">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/support.png'}}" alt="support-image">
                 </div>
                 <div class="service-section__content">
                         <h3 class="service-section__title">Magento Support</h3>
@@ -135,7 +135,7 @@
                         </ul>
                     </div>
                 <div class="service-section__image">
-                    <img src="{{media url='wysiwyg/Service/Frame.png'}}" alt="">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/Frame.png'}}" alt="">
                 </div>
             </div>
         </section>
