--- a/files for admin/works.phtml
+++ b/files for admin/works.phtml
@@ -3,7 +3,7 @@
         <h2 class="work-page__title">best-in-class <br/> eCommerce solutions</h2>
         <h4 class="work-page__sub-title">Our passion lies in making complex things simple. We design and build websites,<br/> e-commerce stores for some of the largest organisations in the world.</h4>
         <div class="work-page__row">
-            <div class="row__img work-page__image"><img src="{{media url="wysiwyg/work/vodafone_banner.png"}}" alt=""></div>
+            <div class="row__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/vodafone_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">
                     Vodafone
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="work-page__dual-top">
-            <div class="dual-top__img work-page__image"><img src="{{media url="wysiwyg/work/ortileb_banner.png"}}" alt=""></div>
+            <div class="dual-top__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/ortileb_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Ortlieb<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>Online store of the the world’s leading brand of waterproof premium equipment.</h5>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="work-page__dual-bottom">
-            <div class="dual-bottom__img work-page__image"><img src="{{media url="wysiwyg/work/dr_berg_banner.png"}}" alt=""></div>
+            <div class="dual-bottom__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/dr_berg_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Dr.Berg<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="work-page__row-reverse">
-            <div class="row-reverse__img work-page__image"><img src="{{media url="wysiwyg/work/tefal_banner.png"}}" alt=""></div>
+            <div class="row-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/tefal_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Tefal<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>official online store of the international brand under which household appliances and dishes are produced</h5>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="work-page__dual-top-reverse">
-            <div class="dual-top-reverse__img work-page__image"><img src="{{media url="wysiwyg/work/krups_banner.png"}}" alt=""></div>
+            <div class="dual-top-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/krups_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Krups<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>Official online store of the international brand under which household appliances and dishes are produced</h5>
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="work-page__dual-bottom-reverse">
-            <div class="dual-bottom-reverse__img work-page__image"><img src="{{media url="wysiwyg/work/soundmag_banner.png"}}" alt=""></div>
+            <div class="dual-bottom-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/soundmag_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Soundmag<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>Online store and the first salon of personal audio</h5>
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="work-page__row">
-            <div class="row__img work-page__image"><img src="{{media url="wysiwyg/work/wmf_banner.png"}}" alt=""></div>
+            <div class="row__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/wmf_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">WMF<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="work-page__dual-top">
-            <div class="dual-top__img work-page__image"><img src="{{media url="wysiwyg/work/rowenta_banner.png"}}" alt=""></div>
+            <div class="dual-top__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/rowenta_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Rowenta<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>Online store of the the world’s leading brand of waterproof premium equipment.</h5>
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="work-page__dual-bottom">
-            <div class="dual-bottom__img work-page__image"><img src="{{media url="wysiwyg/work/chicco_banner.png"}}" alt=""></div>
+            <div class="dual-bottom__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/chicco_banner.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Chicco<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="work-page__row-reverse work-page__last-item">
-            <div class="row-reverse__img work-page__image"><img src="{{media url="wysiwyg/work/full-bottle-wine-with-copy-space_4_.png"}}" alt=""></div>
+            <div class="row-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/full-bottle-wine-with-copy-space_4_.png"}}" alt=""></div>
             <div class="work-page__info">
                 <h4 class="_h4">Goodwine<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
                 <h5>official online store of the international<br/> brand under which household appliances and dishes are produced</h5>
